# discrete-speak

./: .gitignore  README.md  best_model.pth  dataset.pt  gen.py  main.py  output.txt  output_debug.txt  output_debug_2.txt  output_debug_3.txt  output_debug_4.txt  pyproject.toml  train.py
discrete_speak/: alpaca.py  config.py  retrieval.py
docs/: thresholds.md
ds/: bars.py  config.py  data.py  discretization.py  fit.py  generate.py  labeler.py  retrieval.py  segmenters.py  thresholds.py  train.py  visualization.py
ds/models/: attn.py  embed.py  encoder.py  model.py
ds/thresholds/: adv.py  des.py  threshold.py
ds/utils/: russell_3000.py
src/discrete_speak/: __init__.py  alpaca.py
tests/: test_alpaca.py
tests/discrete_speak/: test_alpaca.py
