[project]
name = "discrete-speak"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alpaca-py>=0.40.1",
    "torch>=2.7.0",
]

[dependency-groups]
dev = [
    "pytest>=8.3.5",
    "pytest-mock>=3.14.0",
    "ruff>=0.11.10",
]

[tool.uv.workspace]
members = [
    "discrete_speak",
]
